# finx-accelerator-microservices

./: .gitignore  ADDITIONAL_COMMANDS_SUGGESTIONS.md  CHECK_SERVICES.md  ENHANCED_PROJECT_JSON_COMMANDS.md  MIGRATION_STRATEGY.md  PIPELINE_PROFILES_ARGOCD_GUIDE.md  README.md  ROOT_FILES_DESCRIPTION.md  VIDEO_NOTES.md  build.gradle  nx.json  package-lock.json  package.json  settings.gradle
apps/finx-logger-service-sapi/: build.gradle  project.json
apps/finx-payload-transformer-service-sapi/: build.gradle  docker-compose.yml  gradle.properties  project.json  settings.gradle
docs/: MONOREPO_GUIDE.md  QUICK_REFERENCE.md
services/finx-accelerator-test-executions/: Dockerfile  config.json  package-lock.json  package.json  project.json
services/finx-accelerator-test-executions/src/: app.module.ts  app.ts
services/finx-accelerator-test-executions/src/controllers/: finx_test_executionsController.ts
services/finx-accelerator-test-executions/src/models/: finx_test_executions.ts  (+2 more)
services/finx-codegen-ui/: package-lock.json  package.json  project.json
services/finx-codegen-ui/src/: App.js
services/finx-logger-service-sapi/: Dockerfile  build.gradle  docker-compose.yml  project.json  settings.gradle
services/finx-payload-transformer-service-sapi/: Dockerfile  HELP - Copy.md  build.gradle  project.json
services/py-demo/: README.md  project.json  pyproject.toml
services/py-demo/py_demo/: __init__.py
services/py-demo/tests/: test_main.py
shared/java/: common-dependencies.gradle  gradle.properties  project.json
shared/java/common-utils/: project.json
(+44 files in other folders)
