[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-demo"
version = "0.1.0"
description = "Dummy Python app for Nx monorepo testing (CLI + API)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "typer>=0.12",
  "pandas>=2.2",
  "numpy>=2.0",
  "requests>=2.32"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "httpx>=0.27"
]

[tool.setuptools]
packages = ["py_demo"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["py_demo"]